fix overflow and equal button bugs

--- a/styles.css
+++ b/styles.css
@@ -10,25 +10,29 @@ body {
 }
 
 .result-box {
-    height: 150px;
+    min-height: 150px;
+    width: 200px;
     background-color: rgb(38, 36, 36);
-    display: flex;
+    display: inline-flex;
     justify-content: flex-end;
     flex-direction: column;
-    align-items: flex-end;
     padding: 15px;
-    
 }
 
 .bottom {
     color: white;
     font-weight: 700;
     min-height: 37px;
+    word-wrap: break-word;
+    text-align: right;
     font-size: 2em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .top {
     color: #728AB7;
+    text-align: right;
+    word-wrap: break-word;
+
 }
 
 .buttons {
